New release 2.1 of the NEFFICS Methodology and the Business Model Innovation, Service Innovation and Value Delivery Modelling practices.

--- a/publish.neffics.base-sintef/resources/about.html
+++ b/publish.neffics.base-sintef/resources/about.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="no-bok" http-equiv="Content-Language" />
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<title>NEFFICS Methodology Website</title>
+<title>NEFFICS Methodology Wiki</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@ ICT</a>. </p>
 <p>This program and the accompanying materials are made available under the
 <a href="http://www.eclipse.org/org/documents/epl-v10.php" target="_blank">
 Eclipse Public License V1.0</a>, which accompanies this distribution. </p>
-<p>Copyright © 2010-2012 <a href="http://neffics.eu/consortium/" target="_blank">The NEFFICS Consortium</a>. 
+<p>Copyright © 2010-2013 <a href="http://neffics.eu/consortium/" target="_blank">The NEFFICS Consortium</a>. 
 All rights reserved. </p>
 
 </body>
